fix: Virtual-Keyboard key Tab Shift Enter

--- a/style.css
+++ b/style.css
@@ -31,6 +31,7 @@ body {
     margin-bottom: 20px;
     padding: 10px;
     resize: none;
+    outline: none;
 }
 
 .keyboard {
